# ggcli

./: .gitignore  Cargo.toml
src/: cli.rs  lib.rs  main.rs  output.rs  process.rs
src/cli/: csv.rs  mod.rs  passwd.rs
src/process/: csv_convert.rs  mod.rs  passwd_gen.rs
