[package]
name = "ggcli"
version = "0.1.0"
authors = ["Eoghan Feng <e3ghan@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
csv = "1.4.0"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
toml = "1.1.3"
zxcvbn = "3.1.1"
